aprimorações layout e carregamento de mensagens

--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
         <div class="contatos"><img src="people.svg" /></div>
     </div>
 
-    <div class="content"></div>
+    <div class="content">
+
+    </div>
 
     <div class="bottom">
         <input type="text" name="input" value="Escreva aqui...">
