atualização das mensagens

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
     <div class="bottom">
         <input type="text" name="input" value="Escreva aqui...">
-        <div class="send"><img src="paper-plane-outline.svg" /></div>
+        <div class="send" onclick="enviarMensagem()"><img src="paper-plane-outline.svg" /></div>
     </div>
 
 
